tahini/tests/arrays3.tah
var xy = 10;
print xy[2];

// RuntimeError: Can only access elements of a list or a string.
// [line 2]
